@@ -1,3 +1,4 @@
+Fluid flow: Moved the control panels in front of the pipe so they can't be obscured by it
 # 0.00.38 (57960) Oct 24, 2011
 Fluid flow: Restrict flow rate to be more than or equal to 1000 L/s, this prevents too many red dots from piling up
 Fluid flow: Restrict flow rate to be less than or equal to 10000 L/s, this prevents negative pressure situations
